[UPGRADE] Migrate to Java 17