@@ -40,6 +40,10 @@
 		</developer>
 	</developers>
 
+	<properties>
+		<target.jdk>17</target.jdk>
+	</properties>
+
 	<licenses>
 		<license>
 			<name>BSD</name>
@@ -56,15 +60,28 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.math=ALL-UNNAMED
+						--add-opens java.base/java.net=ALL-UNNAMED
+						--add-opens java.base/java.text=ALL-UNNAMED
+						--add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
 					<encoding>UTF-8</encoding>
+					<optimize>true</optimize>
+					<source>${target.jdk}</source>
+					<target>${target.jdk}</target>
+					<release>${target.jdk}</release>
 				</configuration>
 				<executions>
 					<execution>
